Bug 321583 - Rekonq shows wrong URLs in address bar
Summary: Rekonq shows wrong URLs in address bar
Status: RESOLVED FIXED
Alias: None
Product: rekonq
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 2.3.1
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Andrea Diamantini
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-24 23:25 UTC by John Zaitseff
Modified: 2013-06-26 22:40 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Snapshot of www.smh.com.au: incorrect URL in address bar (89.99 KB, image/png)
2013-06-24 23:25 UTC, John Zaitseff
Details

Note You need to log in before you can comment on or make changes to this bug.
Description John Zaitseff 2013-06-24 23:25:15 UTC
Created attachment 80763 [details]
Snapshot of www.smh.com.au: incorrect URL in address bar

The latest released version of Rekonq, as packaged by Ubuntu PPA (2.3.1-0ubuntu1~ubuntu13.04~ppa1), has what I think is a very annoying bug: visiting a website will now often show an incorrect URL in the address bar.

For example, visit http://www.smh.com.au/.  Once the page finishes loading, you expect the address bar to show that address (and version 2.3.0 did).  Instead, it seems to show the last part of the page (IFRAME, perhaps?) that was loaded; in this case, http://comcluster.cxense.com/Repo/rep.html[...] (URL cut---see attachment).

Could you please restore the previous (correct) behaviour, as was in 2.3.0.  Thanks!
Comment 1 Andrea Diamantini 2013-06-26 22:40:18 UTC
Git commit 83f36acaf95bdd106665d55ceb8deee794a9d2cf by Andrea Diamantini.
Committed on 26/06/2013 at 17:11.
Pushed by adjam into branch 'master'.

Set URL on initial load just when it comes from main frame

Stupid me, I tested one week this patch and then pushed the wrong
version.

Sorry guys, things happen :(

M  +12   -10   src/webtab/webpage.cpp

http://commits.kde.org/rekonq/83f36acaf95bdd106665d55ceb8deee794a9d2cf