Set URL on initial load just when it comes from main frame

Stupid me, I tested one week this patch and then pushed the wrong
version.

Sorry guys, things happen :(

BUG: 321583